syntax="proto3";

package storehouse_client_service;
option go_package="genproto/storehouse_client_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service ClientService {
    rpc CreateClient(CreateClientRequest) returns (Client) {}
    rpc GetByIDClient(ClientPrimaryKey) returns (Client) {}
    rpc GetListClient(GetListClientRequest) returns (GetListClientResponse) {}
    rpc UpdateClient(UpdateClientRequest) returns (Client) {}
    rpc UpdatePatchClient(UpdatePatchClientRequest) returns (Client) {}
    rpc DeleteClient(ClientPrimaryKey) returns (google.protobuf.Empty) {}
}

message ClientPrimaryKey {
    string id = 1;
}

message Client {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string birthday = 4;
    double balance = 5;
    string currency = 6;
    string phone_number = 7;
    string address = 8;
    string status = 9;
    string description = 10;
    string created_at = 11;
    string updated_at = 12;
}

message CreateClientRequest {
    string first_name = 1;
    string last_name = 2;
    string birthday = 3;
    double balance = 4;
    string currency = 5;
    string phone_number = 6;
    string address = 7;
    string status = 8;
    string description = 9;
}

message UpdateClientRequest {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string birthday = 4;
    double balance = 5;
    string currency = 6;
    string phone_number = 7;
    string address = 8;
    string status = 9;
    string description = 10;
}

message UpdatePatchClientRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListClientRequest {
    int32 limit = 1;
    int32 page = 2;
    string search = 3;
    string where_query = 4;
    google.protobuf.Struct filters = 5;
}

message GetListClientResponse {
    int32 count = 1;
    repeated Client clients = 2;
}
